--- a/web/pwa/src/app/page/emulation/context-menu/context-menu.component.html
+++ b/web/pwa/src/app/page/emulation/context-menu/context-menu.component.html
@@ -21,11 +21,11 @@
   </ion-item>
   <ion-item lines="full" button [detail]="false" *ngIf="isMuted && !isAudioOff" (click)="mute(false)">
     <ion-label>Enable audio</ion-label>
-    <ion-icon name="volume-high-outline"></ion-icon>
+    <ion-icon name="volume-high-outline" slot="end"></ion-icon>
   </ion-item>
   <ion-item lines="full" button [detail]="false" *ngIf="!isMuted && !isAudioOff" (click)="mute(true)">
     <ion-label>Disable audio</ion-label>
-    <ion-icon name="volume-mute-outline"></ion-icon>
+    <ion-icon name="volume-mute-outline" slot="end"></ion-icon>
   </ion-item>
   <ion-item lines="full" button *ngIf="hasActiveSession" [detail]="false" (click)="backup()" [disabled]="backupDisabled">
     <ion-label>Save backup</ion-label>
