Support dropping files for installation.

--- a/web/pwa/src/global.scss
+++ b/web/pwa/src/global.scss
@@ -68,6 +68,11 @@ ion-item::part(native), ion-item-option {
 ion-modal {
     padding-left: var(--ion-safe-area-left, 0px);
     padding-right: var(--ion-safe-area-right, 0px);
+
+    ion-content::part(scroll) {
+        max-width: 40em;
+        margin: auto;
+    }
 }
 
 @media only screen and (min-width: 768px) and (min-height: 600px) {
