--- a/web/pwa/src/app/page/storage/subpage-directory/subpage-directory.component.html
+++ b/web/pwa/src/app/page/storage/subpage-directory/subpage-directory.component.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar *ngIf="mode === 'browse'">
-    <ion-title [id]="breadcrumbTriggerId" (click)="openBreadcrumbMenu($event)">{{title}}<div class="select-arrow"
+    <ion-title class="breadcrumb-trigger" [id]="breadcrumbTriggerId" (click)="openBreadcrumbMenu($event)">{{title}}<div class="select-arrow"
         *ngIf="showBreadcrumb"></div></ion-title>
 
     <ion-buttons slot="start">
