--- a/web/pwa/src/app/page/storage/subpage-directory/subpage-directory.component.html
+++ b/web/pwa/src/app/page/storage/subpage-directory/subpage-directory.component.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar *ngIf="mode === 'browse'">
     <ion-title class="breadcrumb" [id]="breadcrumbTriggerId" (click)="openBreadcrumbMenu($event)">
-      <div class="breadcrumb-container"><div class="breadcrumb-current">{{title}}</div><div class="select-arrow" *ngIf="showBreadcrumb"></div>
+      <div class="breadcrumb-container"><div class="breadcrumb-current">{{title}}</div><div class="select-arrow"></div>
       </div>
     </ion-title>
 
