Nav animation is glitchy in firefox.

--- a/web/pwa/src/app/page/storage/storage.page.html
+++ b/web/pwa/src/app/page/storage/storage.page.html
@@ -1,1 +1,1 @@
-<ion-nav #nav [animated]="true" [root]="navRoot" [rootParams]="navRootProps"></ion-nav>
+<ion-nav #nav [animated]="animateNav" [root]="navRoot" [rootParams]="navRootProps"></ion-nav>
