--- a/web/pwa/src/app/page/storage/new-directory-dialog/new-directory-dialog.component.html
+++ b/web/pwa/src/app/page/storage/new-directory-dialog/new-directory-dialog.component.html
@@ -15,7 +15,7 @@
 <ion-content fullscreen>
     <form [formGroup]="formGroup" (keydown.enter)="onEnter()">
         <ion-item lines="none">
-            <ion-label position="stacked">Please enter new directory name</ion-label>
+            <ion-label position="stacked">How should we call this directory?</ion-label>
             <ion-input placeholder="directory name"
                 formControlName="name"></ion-input>
         </ion-item>
