Cleanup, wording, don't show "add files" confirmation unless there were skipped files.

--- a/web/pwa/src/global.scss
+++ b/web/pwa/src/global.scss
@@ -43,6 +43,9 @@ html {
     border: none !important;
 }
 
+.md .alert-checkbox.ion-focused {
+    background: inherit !important;
+}
 
 ion-label h4, p {
     margin-top: 0.75em;
