Hook up paste, bugfixes, polish

--- a/web/pwa/src/app/page/storage/context-menu-directory/context-menu-directory.component.html
+++ b/web/pwa/src/app/page/storage/context-menu-directory/context-menu-directory.component.html
@@ -15,7 +15,7 @@
     <ion-icon name="download-outline" slot="end"></ion-icon>
     Extract zip
   </ion-item>
-  <ion-item lines="full" button [detail]="false" (click)="onPaste()" [disabled]="!vfsService.idClipboardPopulated()">
+  <ion-item lines="full" button [detail]="false" (click)="onPaste()" [disabled]="!vfsService.isClipboardPopulated()">
     <ion-icon name="clipboard-outline" slot="end"></ion-icon>
     Paste
   </ion-item>
