--- a/web/pwa/src/global.scss
+++ b/web/pwa/src/global.scss
@@ -68,6 +68,10 @@ ion-item {
     margin: auto;
 }
 
+ion-toggle {
+    padding-right: 12px;
+}
+
 ion-item::part(native), ion-item-option {
     --ion-safe-area-left: 0px;
     --ion-safe-area-right: 0px;
