Make reduced animations configurable.

--- a/web/pwa/src/app/page/settings/settings.page.html
+++ b/web/pwa/src/app/page/settings/settings.page.html
@@ -70,6 +70,11 @@
       </ion-item>
 
       <ion-item lines="none">
+        <ion-label>Reduce animations</ion-label>
+        <ion-toggle formControlName="reducedAnimations"></ion-toggle>
+      </ion-item>
+
+      <ion-item lines="none">
         <ion-label>Show statistics</ion-label>
         <ion-toggle formControlName="showStatistics"></ion-toggle>
       </ion-item>
