--- a/web/pwa/src/app/page/settings/settings.page.html
+++ b/web/pwa/src/app/page/settings/settings.page.html
@@ -84,14 +84,14 @@
         <ion-toggle formControlName="enableRemoteInstall"></ion-toggle>
       </ion-item>
 
-    <ng-container *ngIf="showDebugOptions"></ng-container>
+    <ng-container *ngIf="showDebugOptions">
+      <h1>Debug</h1>
 
-    <h1>Debug</h1>
-
-    <ion-item lines="none">
-      <ion-label>Snapshot validation (slow)</ion-label>
-      <ion-toggle formControlName="snapshotIntegrityCheck"></ion-toggle>
-    </ion-item>
+      <ion-item lines="none">
+        <ion-label>Snapshot validation (slow)</ion-label>
+        <ion-toggle formControlName="snapshotIntegrityCheck"></ion-toggle>
+      </ion-item>
+    </ng-container>
 
     </form>
   </div>
