--- a/web/pwa/src/app/page/storage/file-entry/file-entry.component.html
+++ b/web/pwa/src/app/page/storage/file-entry/file-entry.component.html
@@ -27,14 +27,17 @@
         <ion-icon *ngIf="entry?.isDirectory" name="folder-outline" slot="start"></ion-icon>
         <ion-icon *ngIf="!entry?.isDirectory" name="document-outline" slot="start"></ion-icon>
 
-        <ion-icon *ngIf="entry?.attributes?.readonly" class="attribute-icon" name="lock-closed-outline" size="small" slot="end"></ion-icon>
-        <ion-icon *ngIf="entry?.attributes?.hidden" class="attribute-icon" name="eye-off-outline" size="small" slot="end"></ion-icon>
-        <ion-icon *ngIf="entry?.attributes?.system" class="attribute-icon" name="cog-outline" size="small" slot="end"></ion-icon>
-        <ion-icon *ngIf="markedForCopy" class="attribute-icon" name="clipboard-outline" size="small" slot="end"></ion-icon>
-        <ion-icon *ngIf="markedForCut" class="attribute-icon" name="cut-outline" size="small" slot="end"></ion-icon>
+        <div slot="end" class="attribute-icon-container">
+            <ion-icon *ngIf="entry?.attributes?.readonly" class="attribute-icon" name="lock-closed-outline" size="small"></ion-icon>
+            <ion-icon *ngIf="entry?.attributes?.hidden" class="attribute-icon" name="eye-off-outline" size="small"></ion-icon>
+            <ion-icon *ngIf="entry?.attributes?.system" class="attribute-icon" name="cog-outline" size="small"></ion-icon>
+            <ion-icon *ngIf="markedForCopy" class="attribute-icon" name="clipboard-outline" size="small"></ion-icon>
+            <ion-icon *ngIf="markedForCut" class="attribute-icon" name="cut-outline" size="small"></ion-icon>
+        </div>
 
         <ion-icon *ngIf="selecting && !selected" name="radio-button-off-outline" slot="end"></ion-icon>
         <ion-icon *ngIf="selecting && selected" name="radio-button-on-outline" slot="end"></ion-icon>
+
         <ion-label>
             <h2>{{entry?.name}}</h2>
             <p>
