Another minor styling fix.

--- a/web/pwa/src/app/page/storage/file-entry/file-entry.component.scss
+++ b/web/pwa/src/app/page/storage/file-entry/file-entry.component.scss
@@ -7,6 +7,10 @@ ion-icon.item-detail-icon {
     min-width: 1em;
 }
 
+ion-label {
+    margin-right: 7em;
+}
+
 .attribute-icon-container {
     position: absolute;
     top: 0;
