Remove translucency to avoid more Safari bugs.

--- a/web/pwa/src/app/page/storage/edit-card-dialog/edit-card-dialog.component.html
+++ b/web/pwa/src/app/page/storage/edit-card-dialog/edit-card-dialog.component.html
@@ -1,4 +1,4 @@
-<ion-header translucent>
+<ion-header>
   <ion-toolbar>
       <ion-title>{{newCard ? 'New memory card' : 'Edit memory card'}}</ion-title>
 
