Add content hashes to wasm and markdown.

--- a/web/pwa/src/app/page/about/about.page.html
+++ b/web/pwa/src/app/page/about/about.page.html
@@ -20,7 +20,7 @@
   </div>
 
   <div class="markdown-container">
-    <markdown src="assets/doc/about.md" (load)="loading = false"></markdown>
+    <markdown [src]="url" (load)="loading = false"></markdown>
   </div>
 
   <div class="version">
