Work around ionic styling regression in context menu.

--- a/web/pwa/src/app/page/storage/context-menu-breadcrumb/context-menu-breadcrumb.component.scss
+++ b/web/pwa/src/app/page/storage/context-menu-breadcrumb/context-menu-breadcrumb.component.scss
@@ -2,4 +2,11 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+
+    // WORK AROUND breaking list element
+    max-width: 170px;
+
+    .ios & {
+        max-width: 130px;
+    }
 }
