More workarounds for ionic sizing regressions.

--- a/web/pwa/src/app/page/storage/context-menu-breadcrumb/context-menu-breadcrumb.component.scss
+++ b/web/pwa/src/app/page/storage/context-menu-breadcrumb/context-menu-breadcrumb.component.scss
@@ -3,7 +3,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
 
-    // WORK AROUND breaking list element
+    // WORKAROUND Ionic bug that causes "end" slot to overflow to next line
     max-width: 170px;
 
     .ios & {
