--- a/web/pwa/src/global.scss
+++ b/web/pwa/src/global.scss
@@ -28,6 +28,8 @@
 html {
     /* Work around scrolling bug in iOS */
     height: 100%;
+
+    --cp-page-width: 40em;
 }
 
 .installation-error {
@@ -58,13 +60,13 @@ ion-item-option {
 
 ion-item-sliding {
     cursor: pointer;
-    max-width: 40em;
+    max-width: var(--cp-page-width);
     margin: auto;
 }
 
 ion-item {
     --background: none;
-    max-width: 40em;
+    max-width: var(--cp-page-width);
     margin: auto;
 }
 
@@ -82,7 +84,7 @@ ion-modal {
     padding-right: var(--ion-safe-area-right, 0px);
 
     ion-content::part(scroll) {
-        max-width: 40em;
+        max-width: var(--cp-page-width);
         margin: auto;
     }
 }
