--- a/web/pwa/src/app/page/storage/subpage-cards/subpage-cards.component.html
+++ b/web/pwa/src/app/page/storage/subpage-cards/subpage-cards.component.html
@@ -42,7 +42,8 @@
 <ion-content>
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Memory cards</ion-title>
+      <ion-title size="large" *ngIf="mode === 'manage'">Memory cards</ion-title>
+      <ion-title size="large" *ngIf="mode === 'select-for-export'">Select for export</ion-title>
     </ion-toolbar>
   </ion-header>
 
