--- a/web/pwa/src/app/page/emulation/emulation.page.scss
+++ b/web/pwa/src/app/page/emulation/emulation.page.scss
@@ -1,5 +1,5 @@
-ion-title {
-    text-align: center;
+.ios-title-placeholder {
+    display: inline-block;
 }
 
 .container {
@@ -46,3 +46,5 @@ canvas {
     max-height: 100%;
     object-fit: contain;
 }
+
+
