--- a/web/pwa/src/app/page/storage/subpage-cards/subpage-cards.component.html
+++ b/web/pwa/src/app/page/storage/subpage-cards/subpage-cards.component.html
@@ -1,69 +1,71 @@
 <ion-header>
-  <ion-toolbar *ngIf="mode === 'manage'">
-    <ion-title>Memory cards</ion-title>
+    <ion-toolbar *ngIf="mode === 'manage'">
+        <ion-title>Memory cards</ion-title>
 
-    <ion-buttons slot="primary">
-      <ion-button (click)="startMassExport()" [disabled]="cards.length === 0">
-        <ion-icon name="share-outline"></ion-icon>
-    </ion-button>
+        <ion-buttons slot="primary">
+            <ion-button (click)="addCardImage()">
+                <ion-icon name="add-outline"></ion-icon>
+            </ion-button>
+        </ion-buttons>
 
-      <ion-button (click)="addCardImage()">
-        <ion-icon name="add-outline"></ion-icon>
-      </ion-button>
+        <ion-buttons slot="secondary">
+            <ion-button (click)="openActionMenu($event)">
+                <ion-icon name="ellipsis-vertical-outline"></ion-icon>
+            </ion-button>
 
-    </ion-buttons>
+            <app-pwa-prompt></app-pwa-prompt>
+        </ion-buttons>
+    </ion-toolbar>
 
-    <ion-buttons slot="secondary">
-      <ion-button (click)="showHelp()">
-        <ion-icon name="help-outline"></ion-icon>
-      </ion-button>
+    <ion-toolbar *ngIf="mode === 'select-for-export'">
+        <ion-title>Export</ion-title>
 
-      <app-pwa-prompt></app-pwa-prompt>
-    </ion-buttons>
-  </ion-toolbar>
+        <ion-buttons slot="primary">
+            <ion-button (click)="onSelectionDone()">{{ selection.size === 0 ? 'Cancel' : 'Export' }}</ion-button>
+        </ion-buttons>
 
-  <ion-toolbar *ngIf="mode === 'select-for-export'">
-    <ion-title>Export</ion-title>
+        <ion-buttons slot="secondary" *ngIf="selection.size !== cards.length">
+            <ion-button (click)="onSelectAll()">Select all</ion-button>
+        </ion-buttons>
 
-    <ion-buttons slot="primary">
-        <ion-button (click)="onSelectionDone()">{{ selection.size === 0 ? 'Cancel' : 'Export' }}</ion-button>
-    </ion-buttons>
-
-    <ion-buttons slot="secondary" *ngIf="selection.size !== cards.length">
-        <ion-button (click)="onSelectAll()">Select all</ion-button>
-    </ion-buttons>
-
-    <ion-buttons slot="secondary" *ngIf="selection.size === cards.length">
-        <ion-button (click)="selection.clear()">Clear</ion-button>
-    </ion-buttons>
-</ion-toolbar>
+        <ion-buttons slot="secondary" *ngIf="selection.size === cards.length">
+            <ion-button (click)="selection.clear()">Clear</ion-button>
+        </ion-buttons>
+    </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large" *ngIf="mode === 'manage'">Memory cards</ion-title>
-      <ion-title size="large" *ngIf="mode === 'select-for-export'">Select for export</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content (contextmenu)="onContextMenu($event)">
+    <ion-header collapse="condense">
+        <ion-toolbar>
+            <ion-title size="large" *ngIf="mode === 'manage'">Memory cards</ion-title>
+            <ion-title size="large" *ngIf="mode === 'select-for-export'">Select for export</ion-title>
+        </ion-toolbar>
+    </ion-header>
 
-  <div class="loader" *ngIf="storageCardService.isLoading()">
-    <ion-spinner></ion-spinner>
-  </div>
-
-  <div *ngIf="!storageCardService.isLoading() && cards.length === 0" class="placeholder-container">
-    <div class="placeholder">
-      No memory cards. Select the &bdquo;+&ldquo; icon in the upper right corner in order to create a
-      new card.
+    <div class="loader" *ngIf="storageCardService.isLoading()">
+        <ion-spinner></ion-spinner>
     </div>
-  </div>
 
-  <ion-list *ngIf="!storageCardService.isLoading() && cards.length > 0">
-    <app-storage-card *ngFor="let card of cards;trackBy:trackCardBy" [card]="card" (delete)="deleteCard(card)"
-      (selectCard)="mode === 'manage' ? browseCard(card): toggleSelection(card)" (edit)="editCard(card)" (check)="checkCard(card)"
-      (interaction)="lastCardTouched = card.id" (save)="saveCard(card)" [touched]="card.id === lastCardTouched"
-      [selecting]="mode === 'select-for-export'" [selectedForExport]="selection.has(card.id)">
-    </app-storage-card>
-  </ion-list>
+    <div *ngIf="!storageCardService.isLoading() && cards.length === 0" class="placeholder-container">
+        <div class="placeholder">
+            No memory cards. Select the &bdquo;+&ldquo; icon in the upper right corner in order to create a new card.
+        </div>
+    </div>
 
+    <ion-list *ngIf="!storageCardService.isLoading() && cards.length > 0">
+        <app-storage-card
+            *ngFor="let card of cards; trackBy: trackCardBy"
+            [card]="card"
+            (delete)="deleteCard(card)"
+            (selectCard)="mode === 'manage' ? browseCard(card) : toggleSelection(card)"
+            (edit)="editCard(card)"
+            (check)="checkCard(card)"
+            (interaction)="lastCardTouched = card.id"
+            (save)="saveCard(card)"
+            [touched]="card.id === lastCardTouched"
+            [selecting]="mode === 'select-for-export'"
+            [selectedForExport]="selection.has(card.id)"
+        >
+        </app-storage-card>
+    </ion-list>
 </ion-content>
